--- a/metube/umbrel-app.yml
+++ b/metube/umbrel-app.yml
@@ -1,5 +1,5 @@
 manifestVersion: 1
-id: sparkles-hello-world
+id: sparkles-metube
 name: metube
 tagline: Replace this tagline with your app's tagline
 icon: https://svgur.com/i/mvA.svg
