--- a/metube/umbrel-app.yml
+++ b/metube/umbrel-app.yml
@@ -2,10 +2,10 @@ manifestVersion: 1
 id: sparkles-metube
 name: metube
 tagline: Replace this tagline with your app's tagline
-icon: https://svgur.com/i/mvA.svg
+icon: https://th.bing.com/th/id/R.dc80b6d441b9d9f6efc9d54177ac0b06?rik=2T62CCjp93ul9w&pid=ImgRaw&r=0&PC=EMMX01
 category: Development
 version: "1.0.0"
-port: 4000
+port: 8081
 description: >-
   Add your app's description here.
 
