--- a/metube/umbrel-app.yml
+++ b/metube/umbrel-app.yml
@@ -3,7 +3,7 @@ id: sparkles-metube
 name: metube
 tagline: Replace this tagline with your app's tagline
 icon: https://th.bing.com/th/id/R.dc80b6d441b9d9f6efc9d54177ac0b06?rik=2T62CCjp93ul9w&pid=ImgRaw&r=0&PC=EMMX01
-category: Development
+category: Downloads
 version: "1.0.0"
 port: 8081
 description: >-
@@ -19,9 +19,7 @@ submission: https://github.com/getumbrel/umbrel-hello-world-app
 repo: https://github.com/getumbrel/umbrel-hello-world-app
 support: https://github.com/getumbrel/umbrel-hello-world-app/issues
 gallery:
-  - https://i.imgur.com/yyVG0Jb.jpeg
-  - https://i.imgur.com/yyVG0Jb.jpeg
-  - https://i.imgur.com/yyVG0Jb.jpeg
+
 releaseNotes: >-
   Add what's new in the latest version of your app here.
 dependencies: []
