--- a/youtubedl-material/umbrel-app.yml
+++ b/youtubedl-material/umbrel-app.yml
@@ -1,5 +1,5 @@
 manifestVersion: 1
-id: youtubedl-material
+id: sparkles-hello-world
 name: Youtubedl Material
 tagline: Replace this tagline with your app's tagline
 icon: https://raw.githubusercontent.com/Tzahi12345/YoutubeDL-Material/master/src/assets/images/logo_64px.png
