--- a/metube/umbrel-app.yml
+++ b/metube/umbrel-app.yml
@@ -1,5 +1,5 @@
 manifestVersion: 1
-id: sparkles-hello-world
+id: metube
 name: MeTube
 tagline: Replace this tagline with your app's tagline
 icon: https://raw.githubusercontent.com/pi-hosted/pi-hosted/master/images/metube.png
